--- a/ui/serverdialog.ui
+++ b/ui/serverdialog.ui
@@ -20,7 +20,7 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1">
+   <item row="0" column="2">
     <widget class="QListWidget" name="listConnections">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -35,19 +35,22 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="labelStatus">
+   <item row="3" column="2">
+    <widget class="QPushButton" name="btnSendMsg">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="font">
       <font>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
-      <string>Status: 0 connections</string>
+      <string>Send</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="2" column="2">
     <widget class="QPushButton" name="btnDisconnect">
      <property name="enabled">
       <bool>false</bool>
@@ -69,24 +72,24 @@
        <pointsize>10</pointsize>
       </font>
      </property>
+     <property name="text">
+      <string extracomment="Enter message here..."/>
+     </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="btnSendMsg">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
+   <item row="1" column="2">
+    <widget class="QLabel" name="labelStatus">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
-      <string>Send</string>
+      <string>Status: 0 connections</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" rowspan="3">
+   <item row="0" column="1">
     <widget class="QListView" name="listViewMessages">
      <property name="font">
       <font>
