--- a/ui/serverdialog.ui
+++ b/ui/serverdialog.ui
@@ -20,22 +20,7 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="2">
-    <widget class="QListWidget" name="listConnections">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="2">
+   <item row="5" column="2">
     <widget class="QPushButton" name="btnSendMsg">
      <property name="enabled">
       <bool>false</bool>
@@ -50,8 +35,8 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="2">
-    <widget class="QPushButton" name="btnDisconnect">
+   <item row="4" column="2">
+    <widget class="QPushButton" name="btnTerminate">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -61,11 +46,11 @@
       </font>
      </property>
      <property name="text">
-      <string>Disconnect</string>
+      <string>Terminate connection</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="5" column="1">
     <widget class="QLineEdit" name="lineEditMsg">
      <property name="font">
       <font>
@@ -77,8 +62,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
-    <widget class="QLabel" name="labelStatus">
+   <item row="0" column="2">
+    <widget class="QLabel" name="labelConnections">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="font">
       <font>
        <pointsize>10</pointsize>
@@ -89,7 +80,35 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="2" rowspan="3">
+    <widget class="QListWidget" name="listConnections">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="1">
+    <widget class="QLabel" name="labelServerStatus">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" rowspan="4">
     <widget class="QListView" name="listViewMessages">
      <property name="font">
       <font>
